force-app/main/default/objects/Contract_Renewal_Batch_Detail__c/Contract_Renewal_Batch_Detail__c.object-meta.xml
<CustomObject>
    <label>Contract Renewal Batch Detail</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Batch Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Renewal Batch Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>