force-app/main/default/objects/Contract_Renewal_Batch_Detail__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>CESContract__r.Account__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>