force-app/main/default/objects/Contract_Renewal_Batch_Detail__c/fields/CESContract__c.field-meta.xml
<CustomField>
    <fullName>CESContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CES Contract</label>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipLabel>Contract Renewal Batch Details</relationshipLabel>
    <relationshipName>Contract_Renewal_Batch_Details</relationshipName>
    <type>Lookup</type>
</CustomField>