force-app/main/default/objects/Contract_Renewal_Batch_Detail__c/fields/Contract_Ending_Date_to_Process__c.field-meta.xml
<CustomField>
    <fullName>Contract_Ending_Date_to_Process__c</fullName>
    <formula>Contract_Renewal_Batch__r.Contract_Ending_Date_to_Process__c</formula>
    <label>Contract Ending Date to Process</label>
    <type>Date</type>
</CustomField>