force-app/main/default/objects/Contract_Renewal_Batch_Detail__c/fields/Contract_Is_Extended__c.field-meta.xml
<CustomField>
    <fullName>Contract_Is_Extended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Is Extended</label>
    <type>Checkbox</type>
</CustomField>