force-app/main/default/objects/Contract_Renewal_Batch_Detail__c/fields/Contract_Margin__c.field-meta.xml
<CustomField>
    <fullName>Contract_Margin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Margin</label>
    <referenceTo>Contract_Margin__c</referenceTo>
    <relationshipLabel>Contract Renewal Batch Details</relationshipLabel>
    <relationshipName>Contract_Renewal_Batch_Details</relationshipName>
    <type>Lookup</type>
</CustomField>