force-app/main/default/objects/Contract_Renewal_Batch_Detail__c/fields/Contract_Renewal_Batch__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Batch__c</fullName>
    <label>Contract Renewal Batch</label>
    <referenceTo>Contract_Renewal_Batch__c</referenceTo>
    <relationshipLabel>Contract Renewal Batch Details</relationshipLabel>
    <relationshipName>Contract_Renewal_Batch_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>