force-app/main/default/objects/Contract_Renewal_Batch_Detail__c/fields/Is_Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auto Renewal</label>
    <type>Checkbox</type>
</CustomField>