force-app/main/default/objects/Contract_Renewal_Batch_Detail__c/fields/Margin_Record_Created__c.field-meta.xml
<CustomField>
    <fullName>Margin_Record_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Margin Record Created</label>
    <type>Checkbox</type>
</CustomField>