force-app/main/default/objects/Contract_Renewal_Batch_Detail__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process</label>
    <type>Checkbox</type>
</CustomField>